add player-stuff (#22)